<resources>
    <string name="app_name">ImageSearch</string>
    <string name="button_search">search</string>
    <string name="search_hint">What to search for?</string>
    <string name="image_title">Image Title</string>
    <string name="image_result_description">Image Result</string>

    <string name="menu_settings">Settings</string>
    <string name="search_options_text">Search Filters</string>

    <string name="image_size_label">Image Size</string>
    <string name="image_type_label">Image Type</string>
    <string name="image_color_label">Image Color</string>
    <string name="image_filetype_label">File Type</string>
    <string name="image_site_label">Site Filter</string>
    <string name="button_save_label">Save Settings</string>
    <string name="site_filter_label">Site Filter</string>
    <string name="site_filter_hint">photobucket.com</string>
</resources>
